[package]
name = "gotta-fill-em-all"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["full"] }
